# game-of-life

./: Cargo.toml  README.md  index.html  index.js
.github/workflows/: actions.yml  deploy.yml  merge_actions.yml  pr_actions.yml  rust.yml
app/: buttonComponent.js  constants.js  fps.js  grid.js  index.js  state.js  ui.js  utils.js
app/styles/: buttonComponent.css  fps.css
src/: cell.rs  coordinate.rs  lib.rs  pattern.rs  universe.rs  utilities.rs
tests/: web.rs
