[package]
name = "wasm-game-of-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[dependencies]
fixedbitset = "0.5.6"
image = "0.24.9"
js-sys = "0.3.68"
wasm-bindgen = "0.2.92"
